--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,7 @@ android {
 
         buildConfigField "String", "WEBVIEW_BASE_URL", "\"https://allaboutsamsung.de\""
         buildConfigField "String", "REST_BASE_URL", "\"https://allaboutsamsung.de/wp-json/wp/v2/\""
+        buildConfigField "String", "COMMENTS_URL_TEMPLATE", "\"https://allaboutsamsung.de/wp-content/plugins/app-api/xml/comment.php?guid=[POST_ID]\""
     }
     buildTypes {
         release {
