--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,6 +94,9 @@ dependencies {
     implementation('com.crashlytics.sdk.android:crashlytics:2.8.0@aar') {
         transitive = true;
     }
+
+    implementation 'com.evernote:android-job:1.2.2'
+    implementation "com.google.android.gms:play-services-gcm:11.8.0"
 }
 
 apply plugin: 'com.google.gms.google-services'
