--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,7 +81,7 @@ dependencies {
 
     implementation "org.jsoup:jsoup:1.11.2"
 
-    def glideVersion = "4.5.0"
+    def glideVersion = "4.4.0"
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     kapt "com.github.bumptech.glide:compiler:$glideVersion"
 
@@ -97,6 +97,13 @@ dependencies {
 
     implementation 'com.evernote:android-job:1.2.2'
     implementation "com.google.android.gms:play-services-gcm:11.8.0"
+
+    implementation "com.davemorrissey.labs:subsampling-scale-image-view:3.9.0"
+    implementation "com.android.support:exifinterface:$supportVersion"
+
+    implementation 'nz.bradcampbell:paperparcel:2.0.5'
+    implementation 'nz.bradcampbell:paperparcel-kotlin:2.0.5' // Optional
+    kapt 'nz.bradcampbell:paperparcel-compiler:2.0.5'
 }
 
 apply plugin: 'com.google.gms.google-services'
