--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
 
         <activity android:name=".gallery.GalleryActivity" />
 
+        <activity android:name=".settings.PreferenceActivity" />
+
         <service android:name=".notification.MessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
