--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,8 @@
 
         <activity
             android:name=".categories.CategoryActivity"
-            android:theme="@style/Theme.AppCompat.Dialog" />
+            android:label="@string/categories"
+            android:theme="@style/Theme.AppCompat.Light.Dialog.Alert" />
 
         <service android:name=".notification.MessagingService">
             <intent-filter>
