--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,12 +16,18 @@ android {
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        def youtubeKeyProperties = new Properties()
+        file("youtube-key.properties").withInputStream { youtubeKeyProperties.load(it) }
+        buildConfigField "String", "YOUTUBE_API_KEY", "\"${youtubeKeyProperties.youtubeKey}\""
 
         buildConfigField "String", "WEBVIEW_BASE_URL", "\"https://allaboutsamsung.de\""
         buildConfigField "String", "REST_BASE_URL", "\"https://allaboutsamsung.de/wp-json/wp/v2/\""
         buildConfigField "String", "COMMENTS_URL_TEMPLATE", "\"https://allaboutsamsung.de/wp-content/plugins/app-api/xml/comment.php?guid=[POST_ID]\""
         buildConfigField "String", "LEGAL_NOTICE_URL", "\"https://allaboutsamsung.de/impressum\""
+        buildConfigField "String", "YOUTUBE_PLAYLIST_ID", "\"UU-JTjqB5yT9C8kdIJRCW2nQ\""
         buildConfigField "int", "BREAKING_CATEGORY_ID", "531"
         buildConfigField "int", "DEAL_TAG_ID", "342"
     }
@@ -43,6 +49,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+
+    implementation 'com.android.support:multidex:1.0.2'
 
     def supportVersion = "27.0.2"
     implementation "com.android.support:appcompat-v7:$supportVersion"
@@ -104,8 +112,17 @@ dependencies {
     implementation "com.android.support:exifinterface:$supportVersion"
 
     implementation 'nz.bradcampbell:paperparcel:2.0.5'
-    implementation 'nz.bradcampbell:paperparcel-kotlin:2.0.5' // Optional
+    implementation 'nz.bradcampbell:paperparcel-kotlin:2.0.5'
     kapt 'nz.bradcampbell:paperparcel-compiler:2.0.5'
+
+    implementation('com.google.api-client:google-api-client-android:1.23.0') {
+        exclude group: 'org.apache.httpcomponents'
+        exclude group: "com.google.code.findbugs"
+    }
+    implementation('com.google.apis:google-api-services-youtube:v3-rev190-1.23.0') {
+        exclude group: 'org.apache.httpcomponents'
+        exclude group: "com.google.code.findbugs"
+    }
 }
 
 apply plugin: 'com.google.gms.google-services'
