--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ apply plugin: 'io.fabric'
 
 repositories {
     maven { url 'https://maven.fabric.io/public' }
+    maven { url 'https://jitpack.io' }
 }
 
 android {
@@ -25,6 +26,7 @@ android {
 
         buildConfigField "String", "WEBVIEW_BASE_URL", "\"https://allaboutsamsung.de\""
         buildConfigField "String", "REST_BASE_URL", "\"https://allaboutsamsung.de/wp-json/wp/v2/\""
+        buildConfigField "String", "AD_BASE_URL", "\"https://allaboutsamsung.de/wp-json/app-api/v1/\""
         buildConfigField "String", "COMMENTS_URL_TEMPLATE", "\"https://allaboutsamsung.de/wp-content/plugins/app-api/xml/comment.php?guid=[POST_ID]\""
         buildConfigField "String", "LEGAL_NOTICE_URL", "\"https://allaboutsamsung.de/impressum\""
         buildConfigField "String", "YOUTUBE_PLAYLIST_ID", "\"UU-JTjqB5yT9C8kdIJRCW2nQ\""
@@ -119,6 +121,8 @@ dependencies {
     implementation 'nz.bradcampbell:paperparcel:2.0.5'
     implementation 'nz.bradcampbell:paperparcel-kotlin:2.0.5'
     kapt 'nz.bradcampbell:paperparcel-compiler:2.0.5'
+
+    implementation 'com.github.takuji31.Koreference:koreference:2.0.0'
 
     implementation('com.google.api-client:google-api-client-android:1.23.0') {
         exclude group: 'org.apache.httpcomponents'
