--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,23 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".post.PostActivity" />
+        <activity android:name=".post.PostActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="${hostName}"
+                    android:pathPrefix="/2" />
+                <data
+                    android:host="www.${hostName}"
+                    android:pathPrefix="/2" />
+                <data android:scheme="http" />
+                <data android:scheme="https" />
+            </intent-filter>
+        </activity>
 
         <activity android:name=".gallery.GalleryActivity" />
 
