--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
         minSdkVersion 19
         targetSdkVersion 27
         versionCode 220
-        versionName "5.0-EAP-4"
+        versionName "5.0-Beta-1"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
