--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,7 @@
 
         <activity
             android:name=".settings.PreferenceActivity"
-            android:theme="@style/AppTheme.Light" />
+            android:theme="@style/AppTheme.Light.WithActionBar" />
 
         <activity android:name=".LegalNoticeActivity">
             <intent-filter>
