--- a/app/build.gradle
+++ b/app/build.gradle
@@ -140,6 +140,8 @@ dependencies {
         exclude group: 'org.apache.httpcomponents'
         exclude group: "com.google.code.findbugs"
     }
+
+    implementation 'com.github.jkwiecien:EasyImage:1.3.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
