Enable full R8 mode

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,4 +19,4 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 
 android.enableR8=true
-android.enableR8.fullMode=false
+android.enableR8.fullMode=true
