--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ android {
         buildConfigField "String", "LEGAL_NOTICE_URL", "\"https://allaboutsamsung.de/impressum\""
         buildConfigField "String", "YOUTUBE_PLAYLIST_ID", "\"UU-JTjqB5yT9C8kdIJRCW2nQ\""
         buildConfigField "String", "APPMOB_APP_ID", "\"$appMobAppId\""
+        buildConfigField "String", "APPMOB_PUBLISHER_ID", "\"pub-5186136702634520\""
         buildConfigField "String", "GOOGLE_ANALYTICS_ID", "\"UA-24939508-1\""
         resValue "string", "appmobPostListAdId", "ca-app-pub-5186136702634520/2021078335"
         buildConfigField "int", "BREAKING_CATEGORY_ID", "531"
@@ -138,6 +139,7 @@ dependencies {
     }
 
     implementation 'com.github.jkwiecien:EasyImage:2.1.1'
+    implementation 'com.google.android.ads.consent:consent-library:1.0.7'
 }
 
 apply plugin: 'com.google.gms.google-services'
