--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,9 +65,9 @@ dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
 
     implementation "androidx.preference:preference:1.0.0"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0-beta02'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.browser:browser:1.0.0'
 
