--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    viewBinding {
+        enabled = true
+    }
 }
 
 androidExtensions {
