--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,22 +68,22 @@ dependencies {
 
     implementation 'androidx.multidex:multidex:2.0.1'
 
-    implementation "androidx.preference:preference:1.0.0"
+    implementation "androidx.preference:preference:1.1.0"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.android.material:material:1.1.0-beta02'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.browser:browser:1.0.0'
 
-    implementation 'androidx.core:core-ktx:1.0.1'
+    implementation 'androidx.core:core-ktx:1.1.0'
 
-    implementation "com.google.firebase:firebase-messaging:17.3.4"
+    implementation "com.google.firebase:firebase-messaging:20.0.1"
 
-    implementation "com.google.android.gms:play-services-ads:17.1.2"
+    implementation "com.google.android.gms:play-services-ads:18.3.0"
 
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     def moshiVersion = "1.8.0"
     implementation "com.squareup.moshi:moshi:$moshiVersion"
@@ -94,7 +94,7 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:$okHttpVersion"
     implementation "com.squareup.okhttp3:okhttp:$okHttpVersion"
 
-    def retrofitVersion = "2.5.0"
+    def retrofitVersion = "2.6.1"
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
@@ -103,11 +103,11 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
 
-    def archVersion = "2.0.0"
-    implementation "androidx.lifecycle:lifecycle-extensions:$archVersion"
-    kapt "androidx.lifecycle:lifecycle-compiler:$archVersion"
-    implementation "androidx.room:room-runtime:$archVersion"
-    kapt "androidx.room:room-compiler:$archVersion"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.1.0"
+    kapt "androidx.lifecycle:lifecycle-compiler:2.1.0"
+    def roomVersion = "2.0.0"
+    implementation "androidx.room:room-runtime:$roomVersion"
+    kapt "androidx.room:room-compiler:$roomVersion"
 
     implementation "org.jsoup:jsoup:1.11.3"
 
@@ -115,13 +115,13 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     kapt "com.github.bumptech.glide:compiler:$glideVersion"
 
-    def daggerVersion = "2.14.1"
+    def daggerVersion = "2.24"
     implementation "com.google.dagger:dagger:$daggerVersion"
     kapt "com.google.dagger:dagger-compiler:$daggerVersion"
 
     implementation "com.github.pwittchen:infinitescroll:0.0.2"
 
-    implementation('com.crashlytics.sdk.android:crashlytics:2.9.8@aar') {
+    implementation('com.crashlytics.sdk.android:crashlytics:2.10.1@aar') {
         transitive = true
     }
 
@@ -129,7 +129,7 @@ dependencies {
     implementation "com.google.android.gms:play-services-gcm:16.0.0"
 
     implementation "com.davemorrissey.labs:subsampling-scale-image-view:3.10.0"
-    implementation 'androidx.exifinterface:exifinterface:1.0.0'
+    implementation 'androidx.exifinterface:exifinterface:1.1.0'
 
     implementation 'com.github.takuji31.Koreference:koreference:2.0.0'
 
